--- a/src/index.html
+++ b/src/index.html
@@ -1,14 +1,12 @@
-<!doctype html>
-<html lang="en">
-<head>
-  <meta charset="utf-8">
-  <title>NgElementsDemo</title>
-  <base href="/">
+<app-sample 
+  name="Rahul Sahay" 
+  url="https://myview.rahulnivi.net"
+  size="2">
+</app-sample>
 
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
-</head>
-<body>
-  <app-root></app-root>
-</body>
-</html>
+<p>
+  For additional information, check out <a href="http://bit.ly/ng-elements">this</a> article.
+</p>
+
+<a class="github-button" href="https://github.com/rahulsahay19/ng-elements" data-icon="octicon-star" data-show-count="true" aria-label="Star nitayneeman/made-with-love on GitHub">Star</a>
+<script async defer src="https://buttons.github.io/buttons.js"></script>
